test/compile_errors/err_c_import_omitted_macro_reference.w
//! expect-error: c_import symbol 'LOG' was omitted

use c_import("#define LOG(fmt, ...) printf(fmt, __VA_ARGS__)\n")

fn main:
    LOG(c"no".ptr)
